# opuntiaOS

./: .clang-format  .clang-tidy  .gitignore  .gn  BUILD.gn  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  bochsrc  boot.s  gn_gen.sh  interrgen.py  kernel_entry.s  link.ld  makefile  makefile.configs  mykernel.iso  set_target.sh  test.s
libs/libc/: BUILD.gn  LIBC_SOURCES.gni  errno.h  malloc.c  malloc.h  pthread.c  pthread.h  setjmp.h  setjmp.s  setjmp_x86.s  stdio.c  stdio.h  stdlib.c  stdlib.h  string.c  string.h  syscalls.c  syscalls.h  termios.c  termios.h  types.h
libs/libc/ctype/: ctype.c
libs/libc/dirent/: dirent.c  dirent.h
libs/libc/include/: assert.h  ctype.h  dirent.h  errno.h  fcntl.h  limits.h  malloc.h  pthread.h  pwd.h  sched.h  setjmp.h  shadow.h  signal.h  stdarg.h  stdatomic.h  stdbool.h  stddef.h  stdint.h  stdio.h  stdlib.h  string.h  syscalls.h  sysdep.h  termios.h  time.h  unistd.h
libs/libc/init/: _init.c  _lib.c
libs/libc/malloc/: malloc.c  malloc.h  slab.c
libs/libc/posix/: fs.c  identity.c  sched.c  signal.c  system.c  tasking.c  time.c
libs/libc/private/: _init.c
libs/libc/pthread/: pthread.c
libs/libc/ptrace/: ptrace.c
libs/libc/pwd/: pwd.c  shadow.c
libs/libc/socket/: socket.c
libs/libc/stdio/: _internal.h  printf.c  scanf.c  stdio.c
libs/libc/stdlib/: env.c  exit.c  pts.c  tools.c
libs/libc/string/: string.c
libs/libc/sys/: _init.c  _structs.h  errno.h  time.h  types.h
libs/libc/termios/: termios.c
libs/libc/time/: strftime.c  time.c
libs/libcxx/: BUILD.gn  cassert.h  errno.h  malloc.h  memory.h  pthread.h  setjmp.h  stdio.h  stdlib.h  string.h  syscalls.h  termios.h
libs/libcxx/abi/: aeabi_runtime.cpp  cxa_runtime.cpp  cxxabi.h  dynamic_cast.cpp  type_info_defs.cpp
libs/libcxx/dirent/: dirent.h
libs/libcxx/include/: __config  __rbtree  __std_streambuffer  __undef_macros  algorithm  bit  cassert  cassert.h  cctype  csetjmp  csignal  cstddef  cstdint  cstdio  cstdlib  cstring  ctime  functional  ios  iosfwd  iostream  iterator  list  malloc.h  map  memory  memory.h  new  numbers  optional  ostream  set  streambuf  string  string_view  type_traits  typeinfo  utility  vector
libs/libcxx/init/: _init.cpp  _lib.cpp
libs/libcxx/private/: _init.cpp
libs/libcxx/src/: iostream.cpp  typeinfo.cpp
libs/libcxx/std/: Dbg.cpp  Dbg.h  LinkedList.h  Memory.h  String.h  Utility.h  Vector.h  WeakPtr.h  vector  vector.h
libs/libcxx/sys/: SharedBuffer.h  _init.cpp  _structs.h  errno.h  time.h  types.h
libs/libcxxabi/: BUILD.gn
libs/libcxxabi/include/: cxxabi.h
libs/libcxxabi/src/: aeabi_runtime.cpp  cxa_runtime.cpp
libs/libfoundation/: BUILD.gn  ByteOrder.h  Event.h  EventLoop.cpp  EventLoop.h  EventReceiver.h  Receivers.h  puff.c  puff.h
libs/libfoundation/compress/: puff.c
libs/libfoundation/src/: EventLoop.cpp  Logger.cpp  ProcessInfo.cpp  URL.cpp
libs/libfreetype/: BUILD.gn  package.py
libs/libg/: BUILD.gn  Canvas.cpp  Canvas.h  Color.cpp  Color.h  Context.cpp  Context.h  Font.cpp  Font.h  PixelBitmap.cpp  PixelBitmap.h  Point.h  Rect.cpp  Rect.h  Shading.h  String.h
libs/libg/ImageLoaders/: PNGLoader.cpp  PNGLoader.h
libs/libg/src/: Color.cpp  Context.cpp  Font.cpp  PixelBitmap.cpp  Rect.cpp
libs/libobjc/: BUILD.gn
libs/libobjc/src/: NSObject.mm  class.mm  init.mm  memory.mm  msgsend_aarch32.S  msgsend_aarch64.S  msgsend_riscv64.S  msgsend_x86.S  msgsend_x86_64.S  selector.mm
libs/libui/: App.cpp  App.h  BUILD.gn  Button.cpp  Button.h  ClientDecoder.cpp  ClientDecoder.h  Connection.cpp  Connection.h  Context.h  EdgeInsets.h  Event.h  Label.cpp  Label.h  Responder.cpp  Responder.h  View.cpp  View.h  ViewController.cpp  Window.cpp  Window.h  WindowConnection.cpp  WindowConnection.h
libs/libui/src/: App.cpp  Button.cpp  ClientDecoder.cpp  CollectionView.cpp  Connection.cpp  ContextManager.cpp  Label.cpp  MenuBar.cpp  PopupMenu.cpp  Responder.cpp  ScrollView.cpp  StackView.cpp  TextField.cpp  TextView.cpp  View.cpp  ViewController.cpp  Window.cpp  main.cpp
servers/window_server/: BUILD.gn  Button.cpp  Button.h  Colors.h  Compositor.cpp  Compositor.h  Connection.cpp  Connection.h  CursorManager.cpp  CursorManager.h  Devices.cpp  Devices.h  ResourceManager.cpp  ResourceManager.h  Screen.cpp  Screen.h  ServerMessages.h  WSConnection.h  WSEvent.h  WSServerDecoder.cpp  WSServerDecoder.h  Window.cpp  Window.h  WindowFrame.cpp  WindowFrame.h  WindowManager.cpp  WindowManager.h  main.cpp  screen.cpp  screen.h  ws_connection.ipc
servers/window_server/src/: Button.cpp  Colors.h  Compositor.cpp  Compositor.h  Connection.cpp  Connection.h  CursorManager.cpp  CursorManager.h  Devices.cpp  Devices.h  Event.h  MenuBar.cpp  MenuBar.h  ResourceManager.cpp  ResourceManager.h  Screen.cpp  Screen.h  ServerDecoder.cpp  ServerDecoder.h  WSConnection.h  Window.cpp  Window.h  WindowFrame.cpp  WindowFrame.h  WindowManager.cpp  WindowManager.h  main.cpp
test/bench/: BUILD.gn  main.cpp
test/kernel/fs/: BUILD.gn
toolchains/: BUILD.gn  COMPILERS.gni
toolchains/scripts/: arm-none-eabi-tools.sh  i686-elf-tools.sh
userland/about/: .info.mk  AppDelegate.cpp  BUILD.gn  main.cpp
userland/applications/activity_monitor/: AppDelegate.cpp  BUILD.gn  GraphView.cpp  GraphView.h  ViewController.h  info.json
userland/applications/terminal/: .info.mk  AppDelegate.cpp  BUILD.gn  TerminalView.cpp  TerminalView.h  TerminalViewController.h  info.json
userland/dock/: AppDelegate.cpp  BUILD.gn  DockEntity.h  DockView.cpp  DockView.h  DockViewController.h  DockWindow.cpp  DockWindow.h  FastLaunchEntity.h  main.cpp
userland/servers/window_server/: BUILD.gn
userland/system/applist/: AppDelegate.cpp  AppEntity.h  AppListView.cpp  AppListView.h  AppListViewController.h  AppListWindow.cpp  AppListWindow.h  BUILD.gn  IconView.cpp  IconView.h  WindowEntity.h
userland/system/dock/: AppDelegate.cpp  AppListView.cpp  AppListView.h  BUILD.gn  DockEntity.h  DockView.cpp  DockView.h  DockViewController.h  (+4 more)
userland/terminal/: AppDelegate.cpp  BUILD.gn  TerminalView.cpp  TerminalView.h  TerminalViewController.h  main.cpp
(+1496 files in other folders)
