# Copyright 2021 Nikita Melekhin. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

buildconfig = "//build/config/BUILDCONFIG.gn"
script_executable = "python3"

default_args = {
  is_debug = true
  compile_tests = true
  optimize = true
  objc_support = false
  test_method = "none"
  host = "gnu"
  device_type = "desktop"
  target_board = "i686"
}
