# Copyright 2021 Nikita Melekhin. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

group("build") {
  deps = [
    "//build/kernel:kernel",
    "//build/libs:libs",
    "//build/userland:userland",
  ]
}

group("env") {
  deps = [
    ":scripts",
  ]
}

group("scripts") {
  deps = [ "//build/tools:build_scripts" ]
}
