import("//build/libs/TEMPLATE.gni")

oneOS_static_library("libc") {
  sources = [
    "ctype/ctype.c",
    "dirent/dirent.c",
    "init/_lib.c",
    "malloc/malloc.c",
    "posix/fs.c",
    "posix/sched.c",
    "posix/signal.c",
    "posix/system.c",
    "posix/tasking.c",
    "pthread/pthread.c",
    "setjmp/$target_cpu/setjmp.s",
    "socket/socket.c",
    "stdio/printf.c",
    "stdio/stdio.c",
    "stdlib/exit.c",
    "stdlib/pts.c",
    "stdlib/tools.c",
    "string/string.c",
    "sysdeps/oneos/generic/shared_buffer.c",
    "sysdeps/unix/$target_cpu/crt0.s",
    "sysdeps/unix/generic/ioctl.c",
    "termios/termios.c",
    "time/time.c",

    # private
    "init/_init.c",
  ]

  include_dirs = [
    "include/",
    "//libs/",
  ]

  configs = [ "//build/libs:lib_flags" ]

  if (host == "llvm") {
    cflags = [ "-flto" ]
  }
}
