import("//build/libs/TEMPLATE.gni")

opuntiaOS_static_library("libc") {
  sources = [
    "ctype/ctype.c",
    "dirent/dirent.c",
    "init/_lib.c",
    "malloc/malloc.c",
    "malloc/slab.c",
    "posix/fs.c",
    "posix/identity.c",
    "posix/sched.c",
    "posix/signal.c",
    "posix/system.c",
    "posix/tasking.c",
    "posix/time.c",
    "pthread/pthread.c",
    "pwd/pwd.c",
    "setjmp/$target_cpu/setjmp.s",
    "socket/socket.c",
    "stdio/printf.c",
    "stdio/scanf.c",
    "stdio/stdio.c",
    "stdlib/exit.c",
    "stdlib/pts.c",
    "stdlib/tools.c",
    "string/string.c",
    "sysdeps/opuntiaos/generic/shared_buffer.c",
    "sysdeps/unix/$target_cpu/crt0.s",
    "sysdeps/unix/generic/ioctl.c",
    "termios/termios.c",
    "time/strftime.c",
    "time/time.c",

    # private
    "init/_init.c",
  ]

  if (target_cpu == "aarch32") {
    sources += [ "string/routines/aarch32/memset.S" ]
  }

  include_dirs = [
    "include/",
    "//libs/",
  ]

  configs = [ "//build/libs:lib_flags" ]

  if (host == "llvm") {
    cflags = [ "-flto" ]
  }
}
