import("//build/libs/TEMPLATE.gni")

oneOS_static_library("libfoundation") {
  sources = [
    "EventLoop.cpp",
    "puff.c",
  ]

  include_dirs = [
    "//libs/",
    "//libs/libcxx/include",
    "//libs/libc/include/",
  ]

  deplibs = [
    "//libs/libcxx:libcxx",
  ]
  configs = [ "//build/libs:libcxx_flags" ]
}
