import("//build/libs/TEMPLATE.gni")

oneOS_static_library("libfoundation") {
  sources = [
    "src/EventLoop.cpp",
    "src/Logger.cpp",
    "src/ProcessInfo.cpp",
    "src/compress/puff.c",
  ]

  deplibs = [ "libcxx" ]
  configs = [ "//build/libs:libcxx_flags" ]

  if (host == "llvm") {
    cflags = [ "-flto" ]
  }
}
