import("//build/libs/TEMPLATE.gni")

oneOS_static_library("libg") {
  sources = [
    "Color.cpp",
    "Context.cpp",
    "Font.cpp",
    "ImageLoaders/PNGLoader.cpp",
    "PixelBitmap.cpp",
    "Rect.cpp",
  ]

  deplibs = [
    "libcxx",
    "libfoundation",
    "libipc",
  ]
  configs = [ "//build/libs:libcxx_flags" ]
}
