import("//build/libs/TEMPLATE.gni")

opuntiaOS_static_library("libobjc") {
  sources = [
    "src/NSObject.mm",
    "src/class.mm",
    "src/init.mm",
    "src/memory.mm",
    "src/selector.mm",
  ]

  include_dirs = [
    "include/",
    "//libs/libc/include/",
    "//libs/",
  ]

  deplibs = [ "libc" ]

  configs = [ "//build/libs:libobjcc_flags" ]

  if (host == "llvm") {
    cflags = [ "-flto" ]
  }
}
