import("//build/libs/TEMPLATE.gni")

oneOS_static_library("libui") {
  sources = [
    "App.cpp",
    "Button.cpp",
    "ClientDecoder.cpp",
    "Connection.cpp",
    "Label.cpp",
    "Responder.cpp",
    "View.cpp",
    "Window.cpp",
  ]

  deplibs = [
    "libcxx",
    "libfoundation",
    "libipc",
    "libg",
  ]
  configs = [ "//build/libs:libcxx_flags" ]
}
