import("//build/libs/TEMPLATE.gni")

opuntiaOS_static_library("libui") {
  sources = [
    "src/App.cpp",
    "src/Button.cpp",
    "src/ClientDecoder.cpp",
    "src/Connection.cpp",
    "src/ContextManager.cpp",
    "src/Label.cpp",
    "src/MenuBar.cpp",
    "src/PopupMenu.cpp",
    "src/Responder.cpp",
    "src/ScrollView.cpp",
    "src/StackView.cpp",
    "src/TextView.cpp",
    "src/View.cpp",
    "src/ViewController.cpp",
    "src/Window.cpp",
    "src/main.cpp",
  ]

  deplibs = [
    "libcxx",
    "libfoundation",
    "libipc",
    "libg",
    "libfreetype",
  ]
  configs = [ "//build/libs:libcxx_flags" ]

  if (host == "llvm") {
    cflags = [ "-flto" ]
  }
}
