import("//build/userland/TEMPLATE.gni")

oneOS_executable("window_server") {
  install_path = "bin/"
  sources = [
    "Button.cpp",
    "Compositor.cpp",
    "Connection.cpp",
    "CursorManager.cpp",
    "Devices.cpp",
    "ResourceManager.cpp",
    "Screen.cpp",
    "WSServerDecoder.cpp",
    "Window.cpp",
    "WindowFrame.cpp",
    "WindowManager.cpp",
    "main.cpp",
  ]

  configs = [ "//build/userland:userland_flags" ]

  if (host == "llvm") {
    cflags = [ "-flto" ]
  }

  deplibs = [
    "libcxx",
    "libfoundation",
    "libipc",
    "libg",
    "libui",
  ]
}
