import("//build/userland/TEMPLATE.gni")

oneOS_executable("window_server") {
  install_path = "bin/"
  sources = [
    "src/Button.cpp",
    "src/Compositor.cpp",
    "src/Connection.cpp",
    "src/CursorManager.cpp",
    "src/Devices.cpp",
    "src/ResourceManager.cpp",
    "src/Screen.cpp",
    "src/ServerDecoder.cpp",
    "src/Window.cpp",
    "src/WindowFrame.cpp",
    "src/WindowManager.cpp",
    "src/main.cpp",
  ]

  configs = [ "//build/userland:userland_flags" ]

  if (host == "llvm") {
    cflags = [ "-flto" ]
  }

  deplibs = [
    "libcxx",
    "libfoundation",
    "libipc",
    "libg",
    "libui",
  ]
}
