import("//build/userland/TEMPLATE.gni")

opuntiaOS_executable("launch_server") {
  # signexec = true
  install_path = "System/"
  sources = [
    "main.cpp",
    "pngloader.cpp",
  ]
  configs = [ "//build/userland:userland_flags" ]
  deplibs = [
    "libcxx",
    "libfoundation",
    "libg",
    "libui",
  ]
}
