import("//build/userland/TEMPLATE.gni")

oneOS_executable("about") {
  install_path = "bin/"
  sources = [
    "main.cpp",
  ]
  configs = [
    "//build/userland:userland_flags",
    "//build/userland:userland_cxx_includes",
  ]
  deplibs = [
    "libcxx",
    "libfoundation",
    "libg",
    "libui"
  ]
}
