import("//build/userland/TEMPLATE.gni")

oneOS_executable("terminal") {
  install_path = "bin/"
  sources = [
    "TerminalView.cpp",
    "main.cpp",
  ]
  configs = [
    "//build/userland:userland_flags",
    "//build/userland:userland_cxx_includes",
  ]
  deplibs = [
    "libcxx",
    "libfoundation",
    "libg",
    "libui"
  ]
}
