# Copyright 2021 Nikita Melekhin. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

group("fs") {
  deps = [
    "//test/kernel/fs/cwd:cwd",
    "//test/kernel/fs/dirfile:dirfile",
    "//test/kernel/fs/fourfiles:fourfiles",
    "//test/kernel/fs/procfs:procfs",
  ]
}
