import("//build/userland/TEMPLATE.gni")

opuntiaOS_application("activity_monitor") {
  display_name = "Monitor"
  sources = [
    "AppDelegate.cpp",
    "GraphView.cpp",
  ]
  configs = [ "//build/userland:userland_flags" ]
  deplibs = [
    "libcxx",
    "libfoundation",
    "libg",
    "libui",
  ]
}
