import("//build/userland/TEMPLATE.gni")

opuntiaOS_executable("dock") {
  install_path = "System/"
  sources = [
    "AppDelegate.cpp",
    "DockView.cpp",
    "DockWindow.cpp",
  ]
  configs = [ "//build/userland:userland_flags" ]
  deplibs = [
    "libcxx",
    "libfoundation",
    "libg",
    "libui",
  ]
}
