import("//build/userland/TEMPLATE.gni")

opuntiaOS_executable("homescreen") {
  install_path = "System/"
  sources = [
    "AppDelegate.cpp",
    "HomeScreenView.cpp",
    "IconView.cpp",
  ]
  configs = [ "//build/userland:userland_flags" ]
  deplibs = [
    "libcxx",
    "libfoundation",
    "libg",
    "libui",
  ]
}
